# libintl

./: .gitignore  CMakeLists.txt  README.md  build.py  conanfile.py
msvc/: libintl.def
msvc/include/: libgnuintl.h  libintl.h
test_package/: conanfile.py  test_package.cpp
